DEPLOY-YML/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik-gatewayclass
 # namespace: mycas
spec:
  controllerName: "traefik.io/gateway-controller"
