DEPLOY-YML/deploy-cycler.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mycas
  name: mycas-cycler
  labels:
    app: mycas-cycler
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: mycas-cycler
  template:
    metadata:
      name: mycas-cycler
      labels:
        app: mycas-cycler
    spec:
      containers:
        - name: mycas-cycler
          image: pdek1991/mycas_cycler:v2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"      
              memory: "128Mi"  
            limits:
              cpu: "50m"     
              memory: "128Mi"
