DEPLOY-YML/deploy-emmg.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycas-emmg
  namespace: mycas
  labels:
    app: mycas-emmg
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: mycas-emmg
  template:
    metadata:
      name: mycas-emmg
      labels:
        app: mycas-emmg
    spec:
      containers:
        - name: mycas-emmg
          image: pdek1991/mycas_emmg:v2
          imagePullPolicy: Always
          #command: ["/bin/sh", "-c", "sleep 1d"]
          resources:
            requests:
              cpu: "50m"      
              memory: "128Mi"  
            limits:
              cpu: "50m"     
              memory: "128Mi"
