DEPLOY-YML/deploy-schedular.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycas-schedular
  namespace: mycas
  labels:
    app: mycas-schedular
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: mycas-schedular
  template:
    metadata:
      name: mycas-schedular
      labels:
        app: mycas-schedular
    spec:
      priorityClassName: low
      containers:
        - name: mycas-schedular
          image: pdek1991/mycas_schedular:v2
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"      
              memory: "128Mi"  
            limits:
              cpu: "50m"     
              memory: "128Mi"
