DEPLOY-YML/deploy-client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycas-client
  namespace: mycas
  labels:
    app: mycas-client
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: mycas-client
  template:
    metadata:
      name: mycas-client
      labels:
        app: mycas-client
    spec:
      containers:
        - name: mycas-client
          image: pdek1991/mycas_client:v2
#          imagePullPolicy: Always
          resources:
            requests:
              cpu: "50m"      
              memory: "128Mi" 
            limits:
              cpu: "50m"      
              memory: "128Mi"  
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: mycas-client
  name: socket-server
  namespace: mycas
spec:
  ports:
  - port: 5050
    protocol: UDP
    targetPort: 5050
  selector:
    app: mycas-client
  type: ClusterIP
