DEPLOY-YML/deploy-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycas-webapp
  namespace: mycas
  labels:
    app: mycas-webapp
spec:
  replicas: 1  # Single replica
  selector:
    matchLabels:
      app: mycas-webapp
  template:
    metadata:
      name: mycas-webapp
      labels:
        app: mycas-webapp
    spec:
      containers:
        - name: mycas-webapp
          image: pdek1991/mycas_webapp:v2
          imagePullPolicy: Always

          #command: ["/bin/sh", "-c", "sleep 1d"]

          resources:
            requests:
              cpu: "100m"      
              memory: "256Mi" 
            limits:
              cpu: "200m"      
              memory: "512Mi" 
          ports:
            - containerPort: 8080  # Flask default port

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              
            initialDelaySeconds: 5
            periodSeconds: 10

---

apiVersion: v1
kind: Service
metadata:
  name: mycas-webapp
spec:
  selector:
    app: mycas-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 31310
  type: NodePort
