DEPLOY-YML/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  type: NodePort
  ports:
    - port: 30090
      targetPort: 30090
      nodePort: 30090
