DEPLOY-YML/kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: mycas
spec:
  serviceName: kafka
  replicas: 1  # Number of Kafka brokers
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      priorityClassName: high
      containers:
      - name: kafka
        image: bitnami/kafka:3.9.0
        ports:
        - containerPort: 9092
        volumeMounts:
        - name: kafka-storage
          mountPath: /bitnami/kafka
  volumeClaimTemplates:
  - metadata:
      name: kafka-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: local-path
      resources:
        requests:
          storage: 128Mi
---

apiVersion: v1
kind: Service
metadata:
  name: kafka
spec:
  ports:
  - name: kafka
    port: 9092
    targetPort: 9092
  clusterIP: None
  selector:
    app: kafka
