DEPLOY-YML/svc-mysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mycas
spec:
  clusterIP: None
  selector:
    app: mycas-mysql
  ports:
    - name: mysql
      port: 3306
