DEPLOY-YML/http2.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: mycas-webapp2-route
  namespace: mycas
spec:
  parentRefs:
  - name: my-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /main
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /find
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /status
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /search
    backendRefs:
    - name: mycas-webapp
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /generate_osm2
    backendRefs:
    - name: mycas-webapp2
      port: 80

  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /device_keys2
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /addentitlement2
    backendRefs:
    - name: mycas-webapp2
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /addentitlement
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /generate_osm
    backendRefs:
    - name: mycas-webapp
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /device_keys
    backendRefs:
    - name: mycas-webapp
      port: 80
