DEPLOY-YML/cycler-nwpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cycler-network-policy
  namespace: mycas
spec:
  podSelector:
    matchLabels:
      app: mycas-cycler
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app: mycas
          podSelector:
            matchLabels:
              app: mycas-client
        - namespaceSelector:
            matchLabels:
              app: mycas
          podSelector:
            matchLabels:
              app: mycas-mysql
      ports:
        - protocol: UDP
          port: 5050
        - protocol: TCP
          port: 3306
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 5050
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              app: mycas
          podSelector:
            matchLabels:
              app: mycas-client
        - namespaceSelector:
            matchLabels:
              app: mycas
          podSelector:
            matchLabels:
              app: mycas-mysql
      ports:
        - protocol: UDP
          port: 5050
        - protocol: TCP
          port: 3306
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
        - protocol: TCP
          port: 5050
