DEPLOY-YML/mysql-nwpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: mycas
spec:
  podSelector:
    matchLabels:
      app: mycas-mysql
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:   
    - namespaceSelector:
        matchLabels:
          app: mycas
      podSelector:
        matchExpressions:
        - key: app
          operator: In
          values: ["mycas-webapp", "mycas-webapp2", "mycas-emmg", "mycas-schedular", "mycas-cycler"]
    ports:
      - protocol: TCP
        port: 3306

  - from: 
    - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
  
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: mycas
      podSelector:
        matchExpressions:
        - key: app
          operator: In
          values: ["mycas-webapp", "mycas-webapp2", "mycas-emmg", "mycas-schedular", "mycas-cycler"]
    ports:
      - protocol: TCP
        port: 3306
  - to: 
    - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
