DEPLOY-YML/schedular-nwpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: schedular-network-policy
  namespace: mycas
spec:
  podSelector:
    matchLabels:
      app: mycas-schedular
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:   
    - namespaceSelector:
        matchLabels:
          app: mycas
      podSelector:
        matchLabels:
          app: mycas-mysql
    ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 3306
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: mycas
      podSelector:
        matchLabels:
          app: mycas-mysql
    ports:
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
        - protocol: TCP
          port: 3306
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
